--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=Kotlin.SpringbootV2
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/orderingDB
+spring.datasource.username=postgres
+spring.datasource.password= Lockz1998!
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
