--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/orderingDB
 spring.datasource.username=postgres
 spring.datasource.password= Lockz1998!
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+springdoc.api-docs.path=/api-docs
